fixing overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 .general-container{
     display: flex;
@@ -20,7 +21,7 @@
     max-height: 100vh;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+    overflow-x: hidden;
 
 }
 .title{
